--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${fileDirname}",
+            "program": "${workspaceFolder}",
+            //"program": "/Users/llimon/go/src/github.com/llimon/churndr/main.go",
             "env": {
                 "KUBECONFIG": "/Users/llimon/.kube/admins@ifdp2-ppd-usw2.cluster.k8s.local"
             },
