Add router and collect logs from k8s

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,8 @@
             },
             "args": [
                 "--development",
+                "--port",
+                8081,
                 "--notification-frequency",
                 60
                 "--no-email-notifications",
