Add container history api

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,12 @@
                 60
                 "--no-email-notifications",
                 "--namespace",
+                "sandbox-sandbox-python-main-usw2-ppd-qa",
+                "--namespace",
+                "sandbox-sandbox-python-main-usw2-ppd-e2e",
+                "--namespace",
+                "fdp-tools-fdp-migration-service-usw2-ppd-e2e",
+                "--namespace",
                 "fdp-tools-fdp-migration-service-usw2-ppd-qal",
                 "--namespace",
                 "sandbox-sandbox-firstbank-usw2-ppd-qal",
@@ -29,6 +35,16 @@
                 "fdp-metadata-cgds-log-processor-usw2-ppd-e2e",
                 "--namespace",
                 "fdp-metadata-cgds-log-processor-usw2-ppd-qal",
+                "--namespace",
+                "sandbox-sandbox-applaud-service-usw2-ppd-e2e",
+                "--namespace",
+                "fdp-aggregation-webhookintegration-usw2-ppd-qal",
+                "--namespace",
+                "fdp-docmgmt-av-scan-pci-usw2-ppd-e2e",
+                "--namespace",
+                "fdp-docmgmt-av-scan-pci-usw2-ppd-prf",
+                "--namespace",
+                "fdp-docmgmt-av-scan-pci-usw2-ppd-qal",
                 "--email-from",
                 "luislimon@gmail.com",
                 "--email-to",
