--- a/crd/crd.yaml
+++ b/crd/crd.yaml
@@ -1,10 +1,17 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: podchurns.churndrcontroller.churndr.com
 spec:
   group: churndrcontroller.churndr.com
-  version: v1alpha1
+  versions:
+  - name: v1alpha1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        x-kubernetes-preserve-unknown-fields: true
   names:
     kind: Podchurn
     plural: podchurns
